Major change in all of the web pages.

--- a/web/src/pages/AddRestaurant/AddRestaurant.html
+++ b/web/src/pages/AddRestaurant/AddRestaurant.html
@@ -481,7 +481,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
      </script>
 
-<!--<script>
+<script>
     function validateAndRedirect() {
     var form = document.getElementById('loginForm');
     var emailInput = document.getElementById('emailInput').value; // Assuming this is your email input ID
@@ -505,7 +505,9 @@ document.addEventListener('DOMContentLoaded', function() {
         form.reportValidity();
     }
 }
+</script>
 
+    <script>
     document.getElementById('restaurantRegistrationForm').addEventListener('submit', function(event) {
     event.preventDefault(); // Prevent form submission
 
@@ -590,7 +592,7 @@ function populateRestaurantTable() {
 // Call this function to populate the table on page load
 populateRestaurantTable();
 
-</script>-->
+</>-->
 
      <!-- For FAQ -->
 <!--      <script>
