--- a/web/src/pages/Confirmations/DeliveryExecutiveConfirmation.html
+++ b/web/src/pages/Confirmations/DeliveryExecutiveConfirmation.html
@@ -38,7 +38,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Confirmation</title>
+    <title>Platera - Delivery Executive Registration Confirmation</title>
+    <link rel="shortcut icon" href="../../../Public/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./Confirmation.css">
    
 </head>
