--- a/web/src/pages/SignUp_SignIn/SignUp_SignIn.html
+++ b/web/src/pages/SignUp_SignIn/SignUp_SignIn.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platera - Sign Up</title>
-    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../Public/favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="SignUp_SignIn.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -393,6 +393,8 @@
         });
     });
 </script>
+
+<script src="../../../error.js"></script>
 
 </body>
 
