--- a/web/src/pages/feedback/feedback.html
+++ b/web/src/pages/feedback/feedback.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feedback Page</title>
+    <title>Platera - Feedback Page</title>
     <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 
 <body>
@@ -186,6 +186,7 @@ stars.forEach(star => {
 });
 
     </script>
+    <script src="../../../error.js"></script>
 </body>
 
 </html>
