major changes happened to some pages, updated some styles.

--- a/web/src/pages/RestaurantsInUser/restaurantsInUser.html
+++ b/web/src/pages/RestaurantsInUser/restaurantsInUser.html
@@ -89,14 +89,16 @@
     <section class="banner">
         <div class="banner-content">
             <h2>Best restaurants Near You</h2>
-            <div class="search-bar">
-                <select id="search-category">
-                    <option value="restaurants">Restaurants</option>
-                    <option value="dishes">Dishes</option>
-                </select>
-                <input type="text" id="search-input" placeholder="Search for restaurants or dishes..." />
-                <button id="search-button">Search</button>
-            </div>
+            <form action="http://localhost:8080/Platera-Main/Search">
+                <div class="search-bar">
+                    <select name="keywordType" id="search-category">
+                        <option value="restaurants">Restaurants</option>
+                        <option value="dishes">Dishes</option>
+                    </select>
+                    <input type="text" name="keyword" id="search-input" placeholder="Search for restaurants or dishes..." />
+                    <button id="search-button">Search</button>
+                </div>
+            </form>
         </div>
     </section>
     
