minor p3. changed some minor changes.

--- a/web/src/pages/AddRestaurant/AddRestaurant.html
+++ b/web/src/pages/AddRestaurant/AddRestaurant.html
@@ -151,7 +151,7 @@
                         <li><a href="../ContactUs/ContactUs.html" target="_blank">Contact Us</a></li>
                     </ul>
                 </div>
-                <a href="../SignUp_SignIn/SignUp_SignIn.html" target="_blank"><button class="signin" id="signin">Sign Up</button></a>
+                <a href="#"><button class="signin" id="signin">Sign In</button></a>
                 <span class="menu" style="color: rgb(255, 255, 255);">
                     <i class="fa-solid fa-bars fa-xl"></i>
                 </span>
@@ -443,7 +443,7 @@ inputs.forEach((input) => {
      <script>
         document.querySelectorAll("#signin, #register").forEach(element => {
     element.addEventListener("click", function() {
-        document.querySelector(".Signup-popup").classList.add("activate");
+        document.querySelector("#Signin-popup").classList.add("activate");
     });
 });
 
