Fixed some issues with Executive request processing

--- a/web/src/pages/Confirmations/requestApprove.html
+++ b/web/src/pages/Confirmations/requestApprove.html
@@ -46,8 +46,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Request Rejected</h1>
-        <p>The request has been successfully rejected.</p>
+        <h1>Request Accepted</h1>
+        <p>The request has been successfully accepted.</p>
         <button onclick="goBack()">Go Back</button>
     </div>
 
