Major changes in menu and categories

--- a/web/src/pages/AddRestaurant/AddRestaurant.html
+++ b/web/src/pages/AddRestaurant/AddRestaurant.html
@@ -111,7 +111,7 @@
         <div class="container1">
             <div class="close-btn"><ion-icon name="close-outline" class="icon"></ion-icon></div>
             <h1>Login</h1>
-            <form action="http://localhost:8080/Platera-Main/sign_in"  >
+            <form action="http://localhost:8080/Platera-Main/sign_in" method="POST">
                 <div class="input_container">
                     <input type="email" name="email_signin" class="input" id="emailInput" required>
                     <label for="Email">Email</label>
