--- a/web/src/pages/login/login.html
+++ b/web/src/pages/login/login.html
@@ -11,7 +11,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -97,7 +96,7 @@
 
 <!-- this is google captcha script-------------------------------------------------------------------------------------------------------- -->
 
-<!-- <script>
+ <script>
 document.addEventListener("DOMContentLoaded", function() {
     const form = document.getElementById('loginForm');
 
@@ -120,7 +119,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
     });
 });
- -->
+ 
 
 </script>
 
