Minor changes in TWOFA servlet

--- a/web/index.html
+++ b/web/index.html
@@ -400,7 +400,7 @@
 
         <!-- this is google captcha script-------------------------------------------------------------------------------------------------------- -->
 
-        <script>
+<!--        <script>
             document.addEventListener("DOMContentLoaded", function () {
                 const form = document.getElementById('loginForm');
 
@@ -424,9 +424,8 @@
                 });
             });
 
-
-        </script>
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        </script>-->
+<!--        <script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
         <script src="./error.js"></script>
 
 
