--- a/web/index.html
+++ b/web/index.html
@@ -95,7 +95,6 @@
                                     <input type="password" required id="password_signin" name="password_signin">
                                     <label>Password</label>
                                 </div>
-                                <div class="g-recaptcha" data-sitekey="6Lc6OjkqAAAAAKpjvVKVJy6HcV28lXPWLvwAtNIr"></div>
 
                                 <div class="remember-forgot">
                                     <label><input type="checkbox">Remember me</label>
@@ -400,7 +399,7 @@
 
         <!-- this is google captcha script-------------------------------------------------------------------------------------------------------- -->
 
-<!--        <script>
+        <script>
             document.addEventListener("DOMContentLoaded", function () {
                 const form = document.getElementById('loginForm');
 
@@ -424,8 +423,8 @@
                 });
             });
 
-        </script>-->
-<!--        <script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
+        </script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <script src="./error.js"></script>
 
 
