--- a/web/src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html
+++ b/web/src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html
@@ -18,10 +18,10 @@
                 <a href="../../Home/Home.html"><img src="./assets/PlateraLogo-red.png" alt=""></a>
             </div>
             <ul class="nav-links">
-                <li><a href="../../Home/Home.html">Home</a></li>
-                <li><a href="#restaurants">Restaurants</a></li>
-                <li><a href="#dishes">Dishes</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="../../Customer/Home.jsp">Home</a></li>
+                <li><a href="../../RestaurantsInUser/restaurantsInUser.jsp">Restaurants</a></li>
+                <li><a href="../../Menu/menu.jsp">Dishes</a></li>
+                <li><a href="../../ContactUs/ContactUs.html">Contact</a></li>
             </ul>
             <div class="navbar-icons">
                 <!-- <button class="profile-btn" onclick="toggleProfileModal()"><i class="fas fa-user"></i></button>
