--- a/web/index.html
+++ b/web/index.html
@@ -358,9 +358,9 @@
 
 
         <!-- All Icon links -->
-        <!-- <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
+        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
 
         <!-- Main Script -->
